Añade URL para el avatar de los usuarios generados con el seeding
